Fixed gradle configs